0031579: Visualization - OpenGl_CappingAlgo performance on some clipping planes

warning correction